--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -4,7 +4,7 @@
   "description": "Social network for ox",
   "main": "server.js",
   "scripts": {
-    "start": "node server",
+    "start": "nodemon server",
     "server": "nodemon server",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
