--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -15,6 +15,7 @@
     "animate.css": "^3.7.2",
     "axios": "^0.24.0",
     "copy-text-to-clipboard": "^3.0.1",
+    "dotenv": "^16.0.0",
     "jquery": "^3.6.0",
     "material-ui-popup-state": "^2.0.0",
     "popper.js": "^1.16.1",
